assets/queries/cloudFormation/aws/default_security_groups_with_unrestricted_traffic/test/negative2.yaml
Resources:
  InstanceSecurityGroup_not_named_default:  # def
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: not_default
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress: # inline ingress
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress: # inline egress
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0

  InstanceSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'  # standalone ingress
    Properties:
      GroupId: !Ref InstanceSecurityGroup_not_named_default # def
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0

  InstanceSecurityGroupEgress:
    Type: 'AWS::EC2::SecurityGroupEgress' # standalone egress
    Properties:
      GroupId: !Ref InstanceSecurityGroup_not_named_default # def
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
