assets/queries/cloudFormation/aws/default_security_groups_with_unrestricted_traffic/test/positive2.yaml
Resources:
  InstanceSecurityGroup_default_1: # def1
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: default
      GroupDescription: Enable SSH access via port 22

  InstanceSecurityGroupIngress:
    Type: 'AWS::EC2::SecurityGroupIngress'  # standalone ingress
    Properties:
      GroupId: !Ref InstanceSecurityGroup_default_1 # def1
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
  
  InstanceSecurityGroup_default_2: # def2
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: default
      GroupDescription: Enable SSH access via port 22

  InstanceSecurityGroupEgress:
    Type: 'AWS::EC2::SecurityGroupEgress' # standalone egress
    Properties:
      GroupId: !Ref InstanceSecurityGroup_default_2 # def2
      IpProtocol: tcp
      FromPort: 22
      ToPort: 22
      CidrIp: 0.0.0.0/0
